--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Cache local Maven repository
         uses: actions/cache@v3
@@ -23,12 +25,13 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
           server-id: ossrh
-          server-username: ${{ secrets.OSSRH_USERNAME }}
-          server-password: ${{ secrets.OSSRH_TOKEN }}
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
-          gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
         env:
           CX_CLIENT_ID: ${{ secrets.CX_CLIENT_ID}}
           CX_CLIENT_SECRET: ${{ secrets.CX_CLIENT_SECRET}}
@@ -36,10 +39,14 @@ jobs:
           CX_TENANT: ${{ secrets.CX_TENANT }}
           CX_SCAN_ID: ${{ secrets.CX_SCAN_ID }}
           CX_APIKEY: ${{ secrets.CX_APIKEY }}
-        run: mvn -B test --file pom.xml
+
 
       - name: Build with Maven
         run: mvn -B verify -DskipTests --file pom.xml
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
       - name: Run SpotBugs Analysis
         uses: jwgmeligmeyling/spotbugs-github-action@master
