--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -26,9 +26,10 @@ jobs:
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git tag -a "${tag}" -m "${message}"
+          git push origin "${tag}"
 
       - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${{ inputs.tag }}" >> $GITHUB_ENV
 
       - name: Echo env
         run: echo ${{ env.RELEASE_VERSION }}
