--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -7,6 +7,11 @@ on:
         description: 'Dev release tag'
         required: true
         type: string
+      cliTag:
+        description: 'Version of the CLI to bundle'
+        required: false
+        default: latest
+        type: string
 
 jobs:
   release:
@@ -17,19 +22,36 @@ jobs:
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      - name: Tag
+      - name: Download CLI
         run: |
-          echo ${{ inputs.tag }}
-          echo "NEXT_VERSION=${{ inputs.tag }}" >> $GITHUB_ENV
-          tag=${{ inputs.tag }}
-          message='${{ inputs.tag }}'
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git tag -a "${tag}" -m "${message}"
-#          git push origin "${tag}"
+          chmod +x ./.github/scripts/update_cli.sh
+          ./.github/scripts/update_cli.sh ${{ inputs.cliTag }}
 
-      - name: Set env
-        run: echo "RELEASE_VERSION=${{ inputs.tag }}" >> $GITHUB_ENV
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      - name: Echo env
-        run: echo ${{ env.RELEASE_VERSION }}
+      - name: Set up Maven Central Repository
+        uses: actions/setup-java@v3.11.0
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+
+      - name: Update the POM version.
+        run: mvn -B versions:set -DnewVersion='${{ inputs.tag }}' --file pom.xml -DskipTests
+
+      - name: Publish package
+        run: mvn --batch-mode deploy -DskipTests -Dast.wrapper.id=ast-cli-java-wrapper-dev
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
