--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -80,4 +80,4 @@ jobs:
             [2]: https://github.com/peter-evans/create-pull-request
 
           labels: cxone
-          branch: feature/update_cli
+          branch: feature/ely/update_cli
