--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          lfs: true
+
+      - name: Install Git LFS
+        run: |
+          sudo apt-get update
+          sudo apt-get install git-lfs
+          git lfs install
+
 
       - name: Cache local Maven repository
         uses: actions/cache@v4
@@ -29,6 +37,22 @@ jobs:
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
+
+      - name: Check existence of cx-linux binary
+        run: |
+          if [ ! -f "src/main/wrapper/resources/cx-linux" ]; then
+          echo "cx-linux binary does not exist"; exit 1;
+          fi
+      - name: Check existence of cx.exe binary
+        run: |
+          if [ ! -f "src/main/wrapper/resources/cx.exe" ]; then
+            echo "cx.exe binary does not exist"; exit 1;
+          fi
+      - name: Check existence of cx-mac binary
+        run: |
+          if [ ! -f "src/main/wrapper/resources/cx-mac" ]; then
+            echo "cx-mac binary does not exist"; exit 1;
+          fi
 
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
