--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
           sudo apt-get install git-lfs
           git lfs install
 
+      - name: Checkout LFS objects
+        run: git lfs checkout
+
 
       - name: Cache local Maven repository
         uses: actions/cache@v4
