--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -40,6 +40,7 @@ jobs:
           echo ${{ steps.checkmarx-ast-cli.outputs.release_tag }} > checkmarx-ast-cli.version
 
       - name: Track large files with Git LFS
+        if: steps.checkmarx-ast-cli.outputs.current_tag != steps.checkmarx-ast-cli.outputs.release_tag
         run: |
           git lfs track "src/main/resources/cx-linux"
           git lfs track "src/main/resources/cx.exe"
